<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

<!--country name - text text-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_country"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/country_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

<!--capital - radio button-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_country_capital"
                android:textColor="@color/colorWhite" />

            <RadioGroup
                android:id="@+id/country_capital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_country_oslo" />

                <RadioButton
                    android:id="@+id/capital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/new_entry_country_stockholm" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_country_copenhagen" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_country_helsinki" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

<!--            region - checkbox-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_country_region"
                android:textColor="@color/colorWhite" />

            <CheckBox
                android:id="@+id/country_norway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_region_1" />

            <CheckBox
                android:id="@+id/country_sweden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_region_2" />

            <CheckBox
                android:id="@+id/country_denmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_region_3" />

            <CheckBox
                android:id="@+id/country_finland"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/new_entry_region_4" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

<!--population number text-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry__country_population"
                android:textColor="@color/colorWhite"/>

            <EditText
                android:id="@+id/country_population"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

<!--            timezones spinner-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry__country_timezone"
                android:textColor="@color/colorWhite" />

            <Spinner
                android:id="@+id/timezone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <Button
                android:id="@+id/display_selected_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorRed"
                android:text="@string/new_entry_country_btn" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>